// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gMPYKf"
    data-testid="InArticlePuff - Container"
    style="border-top: 2px solid #13354E;"
  >
    <a
      class="sc-bwzfXH hJnROK"
      href="https://www.thetimes.co.uk"
    >
      <img
        class="sc-dnqmqq emoKWP"
        src="https://via.placeholder.com/150"
      />
    </a>
    <div
      class="sc-bZQynM rbPju"
    >
      <div
        class="sc-gzVnrw ERVQt"
      >
        <span
          class="sc-htpNat iMpDKo"
          style="color: rgb(19, 53, 78);"
        >
          interactive
        </span>
        <a
          class="sc-bxivhb bHZCrd"
          href="https://www.thetimes.co.uk"
        >
          Where can I get a Covid vaccine in England?
        </a>
        <span
          class="sc-ifAKCX gOoiHU"
        >
          Enter your postcode to find your nearest centre
        </span>
      </div>
      <a
        class="sc-htoDjs djguHq"
        href="https://www.thetimes.co.uk"
      >
        <span
          class="sc-EHOje wYTls"
        >
          Read the full article
        </span>
        <div>
          IconForwardChevron
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gMPYKf"
    data-testid="InArticlePuff - Container"
    style="border-top: 2px solid #13354E;"
  >
    <div
      class="sc-bZQynM jVKIde"
    >
      <div
        class="sc-gzVnrw ERVQt"
      >
        <span
          class="sc-htpNat fhZNeJ"
          style="color: rgb(19, 53, 78);"
        >
          interactive
        </span>
        <a
          class="sc-bxivhb bHZCrd"
          href="https://www.thetimes.co.uk"
        >
          Where can I get a Covid vaccine in England?
        </a>
        <span
          class="sc-ifAKCX gOoiHU"
        />
      </div>
      <a
        class="sc-htoDjs bFrbzf"
        href="https://www.thetimes.co.uk"
      >
        <span
          class="sc-EHOje wYTls"
        >
          Read the full article
        </span>
        <div>
          IconForwardChevron
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div>
    Placeholder
  </div>
</DocumentFragment>
`;
